# Infrastructure_Embedded

./: README.md
Arm_Kinematics/: Arm_Kinematics.cpp  Arm_Kinematics.hpp  CMakeLists.txt
Buzzer/: buzzer.c  buzzer.h  buzzer_task.h
Embedded/AS5600/: main.c
Embedded/DM_IMU/: dev_dm_imu.c  dev_dm_imu.h
Embedded/Emcoder/Encoder/: .cproject  .mxproject  CMakeLists.txt  CMakeLists_template.txt  Encoder.ioc
Embedded/Encoder/: .cproject  .mxproject  CMakeLists.txt  CMakeLists_template.txt  Encoder.ioc
Embedded/Encoder/App/: encoder_task.c  encoder_task.h  referee_task.c  referee_task.h
Embedded/Encoder/User/: robot_config.h
Embedded/Matrix/: README.md  dev_matrix.cpp  dev_matrix.h  dev_robotics.cpp  dev_robotics.h
Embedded/Upper computer control/: main.cpp
Embedded/Version_C/Buzzer/: buzzer.h
Embedded/Version_C/LED/: led.h  led_task.h
Embedded/Version_C/W25Q64/: dev_W25Q64.c  dev_W25Q64.h
Embedded/Version_C/pid/: pid.c  pid.h
Embedded/Version_C/w35t51nw/: dev_w35t51nw.c  dev_w35t51nw.h
Embedded/Version_Cpp/BMI088/: BMI088driver.h
LED/: led.c
Motor_GM6020/: motor.c  motor.h
Transform/: Transform.cpp  Transform.hpp
Upper computer control/src/: motor_dm.cpp
Version_C/WS2812/: armor_led.c
Version_Cpp/Pid/: pid.cpp  pid.h
Version_Cpp/can/: cancan.cpp  cancan.h
Version_Cpp/filter/: filter.h
Version_Cpp/motor/: motor.cpp  motor.h  motor_dm.cpp  motor_dm.h  motor_gm.cpp  motor_gm.h
Version_Cpp/uart/: user_usart.cpp  user_usart.h
WS2812/: armor_led.h
pid/: pid.c  pid.h
thread_pool/: thread_pool.cpp  thread_pool.hpp
(+45 files in other folders)
